--- a/MARL/configs/configs_ppo.ini
+++ b/MARL/configs/configs_ppo.ini
@@ -22,7 +22,7 @@ actor_hidden_size = 128
 critic_hidden_size = 128
 action_masking = False
 ; "regionalR", "global_R"
-reward_type = global_R
+reward_type = regionalR
 
 [TRAIN_CONFIG]
 MAX_EPISODES = 20000
@@ -50,3 +50,7 @@ HEADWAY_TIME = 1.2
 MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 1
+
+[PROJECT_CONFIG]
+name=Safe_MARL
+exp_name=default
