Reorganise the environment config variables and remove unwanted files

--- a/MARL/configs/configs_marl-cav-unsafe.ini
+++ b/MARL/configs/configs_marl-cav-unsafe.ini
@@ -50,7 +50,9 @@ HEADWAY_TIME = 1.2
 MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 1
+mixed_traffic = 0
+safety_guarantee = none
 
 [PROJECT_CONFIG]
 name=Safe_MARL
-exp_name=marl_cav
+exp_name=marl_cav_unsafe
