--- a/MARL/configs/configs_marl-cav.ini
+++ b/MARL/configs/configs_marl-cav.ini
@@ -1,6 +1,7 @@
 [MODEL_CONFIG]
 ; for the RMSprop optimizer
 epsilon = 1e-5
+alpha = 0.99
 reward_gamma = 0.99
 MAX_GRAD_NORM = 5
 ; roll out n steps
@@ -12,6 +13,8 @@ BATCH_SIZE = 100
 ENTROPY_REG = 0.01
 ; seeds for pytorch, 0, 2000, 2021
 torch_seed = 0
+TARGET_UPDATE_STEPS = 3
+TARGET_TAU = 1.0
 
 ; concurrent
 training_strategy = concurrent
@@ -21,9 +24,8 @@ action_masking = False
 ; "regionalR", "global_R"
 reward_type = regionalR
 
-
 [TRAIN_CONFIG]
-MAX_EPISODES = 20000
+MAX_EPISODES = 200
 EPISODES_BEFORE_TRAIN = 1
 EVAL_EPISODES = 3
 EVAL_INTERVAL = 200
@@ -47,4 +49,10 @@ HEADWAY_COST = 4
 HEADWAY_TIME = 1.2
 MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
-traffic_density = 2
+traffic_density = 1
+mixed_traffic = 0
+safety_guarantee = priority
+
+[PROJECT_CONFIG]
+name=Safe_MARL
+exp_name=marl_cav
