testing config file

--- a/MARL/configs/configs_marl-cav-unsafe.ini
+++ b/MARL/configs/configs_marl-cav-unsafe.ini
@@ -50,7 +50,7 @@ HEADWAY_TIME = 1.2
 MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 1
-mixed_traffic = 0
+mixed_traffic = False
 safety_guarantee = none
 
 [PROJECT_CONFIG]
