--- a/marl_cav.yml
+++ b/marl_cav.yml
@@ -10,6 +10,7 @@ dependencies:
   - pytorch=1.7.0=py3.6_cuda11.0.221_cudnn8.0.3_0
   - torchaudio=0.7.0=py36
   - torchvision=0.8.0=py36_cu110
+  - pip=20.0.2=py36_1
   - pip:
     - control==0.9.2
     - gym==0.14.0
