--- a/marl_cav.yml
+++ b/marl_cav.yml
@@ -11,6 +11,7 @@ dependencies:
   - torchaudio=0.7.0=py36
   - torchvision=0.8.0=py36_cu110
   - pip=20.0.2=py36_1
+  - cvxopt=1.2.7=py36hbc9fb32_0
   - pip:
     - control==0.9.2
     - gym==0.14.0
