--- a/marl/configs/test-configs_marl-cav-heading-unsafe.ini
+++ b/marl/configs/test-configs_marl-cav-heading-unsafe.ini
@@ -52,8 +52,8 @@ MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 1
 mixed_traffic = False
-safety_guarantee = priority
+safety_guarantee = none
 
 [PROJECT_CONFIG]
 name=Safe_MARL
-exp_name=marl_cav_heading
+exp_name=marl_cav_heading-unsafe-test
