--- a/marl/configs/configs_marl-cav-heading-unsafe-steer_vel.ini
+++ b/marl/configs/configs_marl-cav-heading-unsafe-steer_vel.ini
@@ -53,7 +53,7 @@ MERGING_LANE_COST = 4
 traffic_density = 1
 mixed_traffic = False
 safety_guarantee = none
-lateral_control = steer
+lateral_control = steer_vel
 
 [PROJECT_CONFIG]
 name=Safe_MARL
