--- a/marl/configs/configs_marl-cav-t_headway-unsafe-steer_vel.ini
+++ b/marl/configs/configs_marl-cav-t_headway-unsafe-steer_vel.ini
@@ -25,10 +25,10 @@ action_masking = False
 reward_type = regionalR
 
 [TRAIN_CONFIG]
-MAX_EPISODES = 20 ;20000
+MAX_EPISODES = 20000
 EPISODES_BEFORE_TRAIN = 1
-EVAL_EPISODES = 3 ;10
-EVAL_INTERVAL = 5 ;200
+EVAL_EPISODES = 10
+EVAL_INTERVAL = 200
 reward_scale = 20.
 actor_lr = 5e-4
 critic_lr = 5e-4
@@ -36,7 +36,7 @@ test_seeds = 0,25,50,75,100,125,150,175,200,325,350,375,400,425,450,475,500,525,
 
 
 [ENV_CONFIG]
-env_name = merge-multi-agent-v0.5
+env_name = merge-multi-agent-v05
 ; seed for the environment, 0, 2000, 2024
 seed = 0
 ; [Hz]
