Recorded average traffic speed and simplified time headway calculation

--- a/marl/configs/test-marl_cav-heading-t_headway-cbf-avs.ini
+++ b/marl/configs/test-marl_cav-heading-t_headway-cbf-avs.ini
@@ -54,8 +54,8 @@ traffic_density = 1
 safety_guarantee = cbf-avs
 lateral_control = steer
 cbf_eta = 0.0325
-traffic_type = av
+traffic_type = mixed
 
 [PROJECT_CONFIG]
 name=Safe_MARL-Tests
-exp_name=marl_cav-heading-t_headway-cbf-avs-tt:av
+exp_name=marl_cav-heading-t_headway-cbf-avs-tt:mixed
