Add 'agent_reward' config option

--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-td3-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-td3-srew.ini
@@ -55,6 +55,7 @@ mixed_traffic = False
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.0325
+agent_reward = srew
 
 [PROJECT_CONFIG]
 name=Safe_MARL
