--- a/marl_cav.yml
+++ b/marl_cav.yml
@@ -17,6 +17,7 @@ dependencies:
     - gym==0.14.0
     - matplotlib==3.3.4
     - opencv-python==4.8.0.76
+    - opencv-python-headless==4.10.0.84
     - pandas==1.1.5
     - pygame==2.5.1
     - wandb==0.15.11
