Adding correct project name in cint config

--- a/marl/configs/marl_cav-heading-t_headway-cbf-avs_cint-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-avs_cint-srew.ini
@@ -58,5 +58,5 @@ cbf_eta = 0.0325
 agent_reward = srew
 
 [PROJECT_CONFIG]
-name=Safe_MARL-Tests
+name=Safe_MARL
 exp_name=marl_cav-heading-t_headway-cbf-avs_cint-srew
