--- a/marl_cav.yml
+++ b/marl_cav.yml
@@ -12,12 +12,13 @@ dependencies:
   - torchvision=0.8.0=py36_cu110
   - pip=20.0.2=py36_1
   - cvxopt=1.2.7=py36hbc9fb32_0
+  - opencv=4.5.3=py36h5fab9bb_2
+  - ffmpeg=4.3.2=h37c90e5_3
   - pip:
     - control==0.9.2
     - gym==0.14.0
     - matplotlib==3.3.4
     - opencv-python==4.8.0.76
-    - opencv-python-headless==4.10.0.84
     - pandas==1.1.5
     - pygame==2.5.1
     - wandb==0.15.11
