--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
@@ -45,17 +45,18 @@ simulation_frequency = 15
 duration = 20
 policy_frequency = 5
 COLLISION_REWARD = 200
-HIGH_SPEED_REWARD = 1
-HEADWAY_COST = 4
+HIGH_SPEED_REWARD = 4
+HEADWAY_COST = 1
 HEADWAY_TIME = 0.5
-MERGING_LANE_COST = 4
+MERGING_LANE_COST = 8
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 1
-mixed_traffic = False
+mixed_traffic = True
+traffic_type = mixed
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.0325
 
 [PROJECT_CONFIG]
 name=Safe_MARL
-exp_name=marl_cav-heading-t_headway-cbf-cav
+exp_name=test-marl_cav-heading-t_headway-cbf-cav-mixed
