--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed.ini
@@ -50,12 +50,13 @@ HEADWAY_COST = 4
 HEADWAY_TIME = 0.5
 MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
-traffic_density = 1
-mixed_traffic = False
+traffic_density = 3
+mixed_traffic = True
+traffic_type = mixed
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.0325
 
 [PROJECT_CONFIG]
 name=Safe_MARL
-exp_name=marl_cav-heading-t_headway-cbf-cav
+exp_name=test-marl_cav-heading-t_headway-cbf-cav-mixed
