--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
@@ -58,5 +58,5 @@ lateral_control = steer
 cbf_eta = 0.0325
 
 [PROJECT_CONFIG]
-name=Safe_MARL
-exp_name=test-marl_cav-heading-t_headway-cbf-cav-mixed-srew
+name=Safe_colab_MARL
+exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-srew
