Refined reward for the mixed traffic

--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
@@ -50,13 +50,14 @@ HEADWAY_COST = 1
 HEADWAY_TIME = 0.5
 MERGING_LANE_COST = 8
 ; 1: easy,  2: medium,  3: hard
-traffic_density = 3
-mixed_traffic = False
+traffic_density = 1
+mixed_traffic = True
+traffic_type = mixed
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.03125
-agent_reward = srew
+agent_reward = mrew
 
 [PROJECT_CONFIG]
-name=Safe_MARL
-exp_name=marl_cav-heading-t_headway-cbf-cav-td3-srew
+name=Safe_colab_MARL
+exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-mrew
