--- a/marl/configs/marl_cav-heading-t_headway-cbf-avs_cint-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-avs_cint-srew.ini
@@ -25,10 +25,10 @@ action_masking = False
 reward_type = regionalR
 
 [TRAIN_CONFIG]
-MAX_EPISODES = 2000
+MAX_EPISODES = 20000
 EPISODES_BEFORE_TRAIN = 1
-EVAL_EPISODES = 5
-EVAL_INTERVAL = 20
+EVAL_EPISODES = 20
+EVAL_INTERVAL = 200
 reward_scale = 20.
 actor_lr = 5e-4
 critic_lr = 5e-4
@@ -45,12 +45,12 @@ simulation_frequency = 15
 duration = 20
 policy_frequency = 5
 COLLISION_REWARD = 200
-HIGH_SPEED_REWARD = 1
-HEADWAY_COST = 4
+HIGH_SPEED_REWARD = 4
+HEADWAY_COST = 1
 HEADWAY_TIME = 0.5
-MERGING_LANE_COST = 4
+MERGING_LANE_COST = 8
 ; 1: easy,  2: medium,  3: hard
-traffic_density = 1
+traffic_density = 3
 safety_guarantee = cbf-avs_cint
 lateral_control = steer
 cbf_eta = 0.03125
@@ -58,5 +58,5 @@ cbf_eta = 0.03125
 agent_reward = srew
 
 [PROJECT_CONFIG]
-name=Safe_MARL
-exp_name=marl_cav-heading-t_headway-cbf-avs_cint-srew
+name=Safe_colab_MARL
+exp_name=marl_cav-heading-t_headway-cbf-avs_cint-td3-srew
