--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-srew.ini
@@ -27,7 +27,7 @@ reward_type = regionalR
 [TRAIN_CONFIG]
 MAX_EPISODES = 20000
 EPISODES_BEFORE_TRAIN = 1
-EVAL_EPISODES = 10
+EVAL_EPISODES = 20
 EVAL_INTERVAL = 200
 reward_scale = 20.
 actor_lr = 5e-4
@@ -56,6 +56,7 @@ traffic_type = mixed
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.03125
+agent_reward = srew
 
 [PROJECT_CONFIG]
 name=Safe_colab_MARL
