--- a/marl/configs/test-marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
+++ b/marl/configs/test-marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
@@ -25,10 +25,10 @@ action_masking = False
 reward_type = regionalR
 
 [TRAIN_CONFIG]
-MAX_EPISODES = 20000
+MAX_EPISODES = 200
 EPISODES_BEFORE_TRAIN = 1
-EVAL_EPISODES = 20
-EVAL_INTERVAL = 200
+EVAL_EPISODES = 5
+EVAL_INTERVAL = 20
 reward_scale = 20.
 actor_lr = 5e-4
 critic_lr = 5e-4
@@ -51,12 +51,13 @@ HEADWAY_TIME = 0.5
 MERGING_LANE_COST = 8
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 3
-mixed_traffic = False
+mixed_traffic = True
+traffic_type = mixed
 safety_guarantee = cbf-cav
 lateral_control = steer
 cbf_eta = 0.03125
-agent_reward = srew
+agent_reward = mrew
 
 [PROJECT_CONFIG]
-name=Safe_MARL
-exp_name=marl_cav-heading-t_headway-cbf-cav-td3-srew
+name=Safe_colab_MARL
+exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-mrew
