Update project name for experiments with mixed traffic

--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed.ini
@@ -58,5 +58,5 @@ lateral_control = steer
 cbf_eta = 0.03125
 
 [PROJECT_CONFIG]
-name=Safe_colab_MARL
+name=Safe_mixed_MARL
 exp_name=marl_cav-heading-t_headway-cbf-cav-mixed
