--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
@@ -59,5 +59,5 @@ cbf_eta = 0.03125
 agent_reward = mrew
 
 [PROJECT_CONFIG]
-name=Safe_colab_MARL
+name=Safe_mixed_MARL
 exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-mrew
