Updated model with shared network

--- a/marl/configs/configs_marl-cav-heading-t_headway-shared-unsafe.ini
+++ b/marl/configs/configs_marl-cav-heading-t_headway-shared-unsafe.ini
@@ -20,6 +20,7 @@ TARGET_TAU = 1.0
 training_strategy = concurrent
 actor_hidden_size = 128
 critic_hidden_size = 128
+shared_network = True
 action_masking = False
 ; "regionalR", "global_R"
 reward_type = regionalR
@@ -56,4 +57,4 @@ safety_guarantee = none
 
 [PROJECT_CONFIG]
 name=Safe_MARL
-exp_name=marl_cav_heading-t_headway-unsafe
+exp_name=marl_cav_heading-t_headway-shared-unsafe
