--- a/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
+++ b/marl/configs/marl_cav-heading-t_headway-cbf-cav-mixed-mrew.ini
@@ -30,8 +30,8 @@ EPISODES_BEFORE_TRAIN = 1
 EVAL_EPISODES = 20
 EVAL_INTERVAL = 200
 reward_scale = 20.
-actor_lr = 5e-4
-critic_lr = 5e-4
+actor_lr = 1e-4
+critic_lr = 1e-4
 test_seeds = 0,25,50,75,100,125,150,175,200,325,350,375,400,425,450,475,500,525,550,575
 
 
@@ -60,4 +60,4 @@ agent_reward = mrew
 
 [PROJECT_CONFIG]
 name=Safe_mixed_MARL
-exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-mrew
+exp_name=marl_cav-heading-t_headway-cbf-cav-mixed-mrew-lr:1e4
