--- a/marl/configs/marl_cav-heading-t_headway-dmc.ini
+++ b/marl/configs/marl_cav-heading-t_headway-dmc.ini
@@ -36,7 +36,7 @@ test_seeds = 0,25,50,75,100,125,150,175,200,325,350,375,400,425,450,475,500,525,
 
 
 [ENV_CONFIG]
-env_name = merge-multi-agent-v1
+env_name = merge-multi-agent-v0
 ; seed for the environment, 0, 2000, 2024
 seed = 0
 ; [Hz]
@@ -57,4 +57,4 @@ lateral_control = steer
 
 [PROJECT_CONFIG]
 name=Safe_colab_MARL
-exp_name=marl_cav-heading-t_headway-dmc:p5-td3-fromdell
+exp_name=marl_cav-heading-t_headway-dmc:np6-td3-fromdell-test
