Minimise deep copy and use priority values

--- a/marl/configs/marl_cav-heading-t_headway-priority.ini
+++ b/marl/configs/marl_cav-heading-t_headway-priority.ini
@@ -52,9 +52,9 @@ MERGING_LANE_COST = 4
 ; 1: easy,  2: medium,  3: hard
 traffic_density = 3
 mixed_traffic = False
-safety_guarantee = dmc
+safety_guarantee = priority
 lateral_control = steer
 
 [PROJECT_CONFIG]
 name=Safe_colab_MARL
-exp_name=marl_cav-heading-t_headway-dmc:p6-td3
+exp_name=marl_cav-heading-t_headway-priority6-td3
