Project correction for mixed traffic

--- a/marl/configs/marl_cav-heading-t_headway-dmc-mixed.ini
+++ b/marl/configs/marl_cav-heading-t_headway-dmc-mixed.ini
@@ -57,5 +57,5 @@ safety_guarantee = dmc
 lateral_control = steer
 
 [PROJECT_CONFIG]
-name=Safe_colab_MARL
+name=Safe_mixed_MARL
 exp_name=marl_cav-heading-t_headway-dmc:p6-mixed-td3
